Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112287

android: Input does not work with QQuickWidget

    XMLWordPrintable

Details

    • Android
    • 2023wk52FOQtforAndroid, 2024wk14FOQtforAndroid, 2024wk16FOQtforAndroid

    Description

      Touch input does not seem to be delivered to QQuickWidget content. Not even with Qt::AA_AcceptTouchEvents.

      To reproduce, run attached example and try to tap on the text fields.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lapohjan Lauri Pohjanheimo
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes