src/plugins/platforms/android/androidjniinput.cpp
@@ -353,7 +353,8 @@ namespace QtAndroidInput
 
         QPointF mappedTouchPoint = window->mapToGlobal(QPointF(x, y));
         QWindowSystemInterface::TouchPoint touchPoint;
-        touchPoint.id = id;
+        // Start numbering touch points from 1
+        touchPoint.id = id + 1;
         touchPoint.pressure = pressure;
         touchPoint.rotation = qRadiansToDegrees(rotation);
         touchPoint.normalPosition = QPointF((mappedTouchPoint.x() / dw),
